More refactoring, mostly formatting again.
Signed-off-by: Arjan Tijms <arjan.tijms@gmail.com>